src/test/ui/methods/method-ambig-one-trait-unknown-int-type.stderr
error[E0282]: type annotations needed
  --> $DIR/method-ambig-one-trait-unknown-int-type.rs:24:17
   |
LL |     let mut x = Vec::new();
   |         -----   ^^^^^^^^ cannot infer type for `T`
   |         |
   |         consider giving `x` a type

error[E0308]: mismatched types
  --> $DIR/method-ambig-one-trait-unknown-int-type.rs:33:20
   |
LL |     let y: usize = x.foo();
   |                    ^^^^^^^ expected usize, found isize
help: you can convert an `isize` to `usize` or panic if it the converted value wouldn't fit
   |
LL |     let y: usize = x.foo().try_into().unwrap();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
